fixed title not showing when it should

--- a/src/styles/Components/Summary.scss
+++ b/src/styles/Components/Summary.scss
@@ -171,7 +171,7 @@
 
         .question-answer {
             background-color: #fff;
-            padding: 2px;
+            padding: 2px 4px;
             margin: 0;
             border-radius: 5px;
             height: min-content;
